--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-TELEGRAM_BOT_TOKEN=6752781677:AAEytNdY1JWTFIGW1nUm44IplJ2R0uThofI
-ADMIN_CHAT_ID=635379822
+TELEGRAM_BOT_TOKEN="6752781677:AAEytNdY1JWTFIGW1nUm44IplJ2R0uThofI"
+ADMIN_CHAT_ID="635379822"
 
 REMOTE_BASE_PATH="https://somewhere.example.com" # Without trailing slash
 REMOTE_URI="" # Leave empty if your in the root of your domain (With trailing slash)
